# cython-test

./: .gitignore  pyproject.toml  setup.py
src/cython_test/: c_prime_finder.pyx  main.py  py_prime_finder.py
