[project]
name = "cython_test"
version = "1.0"
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
dev = ["Cython>=3.0.11", "build", "setuptools"]

[build-system]
requires = ["setuptools", "Cython>=3.0.11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cython_test*"]

[tool.setuptools.exclude-package-data]
cython_test = ["c_prime_finder.c"]
